Se agregó contacto, proyectos, twitter y FB

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -20,8 +20,8 @@
     <nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
             <a class="navbar-item" href="{{ .Site.BaseURL | absURL }}">Inicio</a>
-            <a class="navbar-item" href="{{ .Site.BaseURL | absURL }}">Proyectos</a>
-            <a class="navbar-item" href="{{ .Site.BaseURL | absURL }}">Contacto</a>
+            <a class="navbar-item" href="{{ .Site.BaseURL | absURL }}/proyectos">Proyectos</a>
+            <a class="navbar-item" href="{{ .Site.BaseURL | absURL }}/contacto">Contacto</a>
         </div>
     </nav>
     <!-- /nav -->
