--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,10 +1,10 @@
 <footer class="footer has-background-grey-darker has-text-white">
     <div class="content has-text-centered">
         <p>
-            <span class="icon is-large"><a href="https://twitter.com/" class="mysocial" rel="me"><i class="fab fa-twitter fa-3x"></i></a></span>&nbsp;&nbsp;
+            <span class="icon is-large"><a href="https://twitter.com/jorgesolajais" class="mysocial" rel="me"><i class="fab fa-twitter fa-3x"></i></a></span>&nbsp;&nbsp;
             <span class="icon is-large"><a href="https://www.youtube.com/" class="mysocial" rel="me"><i class="fab fa-youtube fa-3x"></i></a></span>&nbsp;&nbsp;
             <span class="icon is-large"><a href="https://instagram.com/" class="mysocial" rel="me"><i class="fab fa-instagram fa-3x"></i></a></span>&nbsp;&nbsp;
-            <span class="icon is-large"><a href="https://facebook.com/" class="mysocial" rel="me"><i class="fab fa-facebook fa-3x"></i></a></span>&nbsp;&nbsp;
+            <span class="icon is-large"><a href="https://facebook.com/jorgesolajais" class="mysocial" rel="me"><i class="fab fa-facebook fa-3x"></i></a></span>&nbsp;&nbsp;
             <br><br>
             Copyright &copy; {{ .Site.Title }} {{ now.Format "2006"}} 
             <br>Power by Graficon &copy;
